# topos

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  topos.config.yaml.example
docs/: architecture-recursive-dag.md  architecture.md  config.md  extending.md  lessons.md
scripts/: critic_comparison.py  gemini_cost_recompute.py  glb_turntable.py  make_turntable_gifs.py  verify_geometry.py
tests/: test_analysis_backends.py  test_atif_tool_trajectory.py  test_blender_path_resolve.py  test_blender_runtime.py  test_bpy_docs.py  test_classify_exit.py  test_claude_backend.py  test_claude_stream_json.py  test_cli_backend_dispatch.py  test_cli_critic_brace_repair.py  test_cli_critic_per_task_isolation.py  test_codex_gemini_backends.py  test_design_references.py  test_expand_articulated_parts.py  test_fix_loop_namespaced_ids.py  test_fix_loop_sticky_pass.py  test_fix_part_template.py  test_gemini_stream_json.py  test_gemini_transient_retry.py  test_gemini_vision_critic.py  test_image_gen.py  test_image_gen_openai.py  test_judge_intent_role_hint.py  test_judge_reference.py  test_make_entry.py  test_paths_resolve.py  test_plan_schema_goal_file.py  test_pricing.py  test_quota_retry.py  test_render_wrapper_naming.py  test_run_process_watchdog.py  test_runner_deterministic_skip.py  test_runner_file_presence_override.py  test_runner_fix_rerun.py  test_runner_narrow_batch.py  test_runner_parallel.py  test_runner_subgraph_expansion.py  test_runtime_fix_loop.py  test_skills.py  test_stream_dialect.py  (+12 more)
topos/: _fs_diff.py  cli.py  config.py  config_defaults.yaml  doctor.py  process.py  (+2 more)
(+170 files in other folders)
